fix jumping console page

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -33,3 +33,6 @@ body {
 #eeblintern {
     min-height: 110px;
 }
+td {
+    font-family: monospace;
+}
